# mpiaa

./: .gitignore
activities/: CMakeLists.txt  README.md  activities.cpp  activities.h  activities_test.cpp  activity.cpp  activity.h  main.cpp
closest_pair/: CMakeLists.txt  README.md  closest_pair.cpp  closest_pair.h  closest_pair_test.cpp  main.cpp  point.cpp  point.h  point_test.cpp
containers/: CMakeLists.txt  README.md  main.cpp
count_sort/: CMakeLists.txt  README.md  count_sort.cpp  count_sort_test.cpp
dictionary/: CMakeLists.txt  README.md  dictionary.cpp  dictionary.h  dictionary_test.cpp  main.cpp
duplicates/: CMakeLists.txt  README.md  duplicates.cpp  duplicates_test.cpp
lcs/: CMakeLists.txt  README.md  lcs.cpp  lcs.h  lcs_test.cpp
min_spanning_tree/: CMakeLists.txt  README.md  min_spanning_tree.cpp  min_spanning_tree.h  min_spanning_tree_test.cpp
shortest_path/: CMakeLists.txt  README.md  main.cpp  shortest_path.cpp  shortest_path.h  shortest_path_test.cpp
tsp/: CMakeLists.txt  README.md  main.cpp  tsp.cpp  tsp.h  tsp_test.cpp
tsp/practice_6/: CMakeLists.txt  README.md  main.cpp  tsp.cpp  tsp.h  tsp_test.cpp
